@@ -1,7 +1,5 @@
 - handle 27e < 28 in version comperator
 - add --rebuild-set to dependent
-- use `eval $(fgrep -h 'PKGMK_PACKAGE_DIR=' $(which pkgmk) /etc/pkgmk.conf) && echo
-$PKGMK_PACKAGE_DIR` to determine PACKAGE_DIR
 - allow dependency injection for sysup, with previews
 - prefer toolchain (patch in trac)
 - logging: check for non-root owned symlinks
