@@ -1,6 +1,8 @@
 * 0.5.14	00.00.200x	Johannes Winkelmann
 - Remove handling of external dependency list
 - make InstallTransaction::getPkgDest use pkgmk.conf from install-root
+- revert getPkgDest to ignore install-root
+- determine PKGMK_PACKAGE_DIR using fgrep without sourcing pkgmk.conf
 
 * 0.5.13	08.09.2006	Johannes Winkelmann
 - Show undecided versions in diff and sysup when using "prefer higher"
